Add css and change hello world

--- a/output.html
+++ b/output.html
@@ -4,18 +4,92 @@
 <meta charset="UTF-8">
 <title>Markdown to HTML</title>
 <style>
-        /*Add CSS here */
+        body {
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+            font-size: 18px;
+            margin: 30px 40px 10px 25px;
+        }
+
+        h1 {
+            font-size: 35px;
+            color: white;
+            margin-left: 10px;
+            margin-bottom: 0px;
+            margin-top: 15px;
+        }
+
+        h2 {
+            font-size: 32px;
+            color: white;
+            margin-left: 10px;
+            margin-bottom: 0px;
+            margin-top: 10px;
+        }
+
+        h3 {
+            font-size: 28px;
+            color: white;
+            margin-left: 10px;
+            margin-bottom: 0px;
+            margin-top: 10px;
+        }
+
+        h4 {
+            font-size: 26px;
+            color: white;
+            margin-left: 10px;
+            margin-bottom: 0px;
+            margin-top: 10px;
+        }
+
+        h5 {
+            font-size: 24px;
+            color: white;
+            margin-left: 10px;
+            margin-bottom: 0px;
+            margin-top: 10px;
+        }
+
+        h6 {
+            font-size: 22px;
+            color: white;
+            margin-left: 10px;
+            margin-bottom: 0px;
+            margin-top: 5px;
+        }
+
+        p {
+            font-size: 16px;
+            margin-left: 20px;
+            margin-bottom: 0px;
+            margin-top: 5px;
+
+        }
+
+        ul {
+            font-size: 18px;
+            margin-left: 20px;
+        }
+
+        li {
+            font-size: 16px;
+            line-height: 0.75;
+        }
 </style>
 </head>
 <body>
 <h1>C'est quoi ?</h1>
-<p>Ce document, à pour but d'être un exemple pour mon script qui convertit le markdown en html !! C'est pas incroyable ca ???</p>
+<p>Ce document, à pour but d'être un exemple pour mon script qui convertit le markdown en html !! <b>C'est pas incroyable ca ???</b></p>
+<p><i>C'est en italique nan ????</i></p>
 <p></p>
+<h1>Lien</h1>
 <p>[[Lien autres docs]]</p>
 <p>[[Lien doc inexistant]]</p>
 <p></p>
 <p></p>
-<h1>Embed</h1>
+<h2>Embed</h2>
 <p>![[test1]]</p>
 <p></p>
 <p>![[Test numéro 27]]</p>
@@ -71,5 +145,12 @@
 <p>> [!bug]</p>
 <p>> Ceci est une liste de tous les bugs présent</p>
 <p></p>
+<h1>Test des autres Headers</h1>
+<h1>Header 1</h1>
+<h2>Header 2</h2>
+<h3>Header 3</h3>
+<h4>Header 4</h4>
+<h5>Header 5</h5>
+<h6>Header 6</h6>
 </body>
 </html>
