Add links support

--- a/output.html
+++ b/output.html
@@ -85,14 +85,14 @@
 <p><i>C'est en italique nan ????</i></p>
 <p></p>
 <h1>Lien</h1>
-<p>[[Lien autres docs]]</p>
-<p>[[Lien doc inexistant]]</p>
+<p><a href="Lien autres docs"> Lien autres docs</a> Puis <a href="Lien autres docs"> Lien autres docs</a> et ensuite <a href="Lien autres docs"> Lien autres docs</a></p>
+<p>Ce lien n'existe pas, il devrait etre rouge !! <a href="Lien doc inexistant"> Lien doc inexistant</a> et oui</p>
 <p></p>
 <p></p>
 <h2>Embed</h2>
-<p>![[test1]]</p>
+<p>!<a href="test1"> test1</a></p>
 <p></p>
-<p>![[Test numéro 27]]</p>
+<p>!<a href="Test numéro 27"> Test numéro 27</a></p>
 <p></p>
 <p></p>
 <p></p>
