Add links converter

--- a/output.html
+++ b/output.html
@@ -86,11 +86,11 @@
 <p></p>
 <h1>Lien</h1>
 <p><a href="Lien autres docs"> Lien autres docs</a> Puis <a href="Lien autres docs"> Lien autres docs</a> et ensuite <a href="Lien autres docs"> Lien autres docs</a></p>
-<p>Ce lien n'existe pas, il devrait etre rouge !! <a href="Lien doc inexistant"> Lien doc inexistant</a> et oui</p>
+<p>Ce lien n'existe pas, il devrait etre rouge !! <b>Lien doc inexistant</b> et oui</p>
 <p></p>
 <p></p>
 <h2>Embed</h2>
-<p>!<a href="test1"> test1</a></p>
+<p>!<b>test1</b></p>
 <p></p>
 <p>!<a href="Test numéro 27"> Test numéro 27</a></p>
 <p></p>
