--- a/output.html
+++ b/output.html
@@ -77,6 +77,11 @@
             font-size: 16px;
             line-height: 0.75;
         }
+
+        a {
+            color: rgb(234, 152, 255);
+            font-style: italic;
+        }
 </style>
 </head>
 <body>
