--- a/output.html
+++ b/output.html
@@ -83,6 +83,9 @@
             font-style: italic;
         }
 </style>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 </head>
 <body>
 <h1>C'est quoi ?</h1>
@@ -142,7 +145,9 @@
 <p>> Note</p>
 <p>> Ceci est une note</p>
 <h5>Header 5</h5>
-<p>$3x^{4}\times \sin x + e^{ 19 }$</p>
+<p>\(3x^{4}\times \sin x + e^{ 19 }\)</p>
+<p>\(f(x) = \dfrac{\cos x}{\sin x}\)</p>
+<p>\(\dfrac{a}{n+1}x^{n+1} + C\)</p>
 <h6>Header 6</h6>
 <p>> [!note]</p>
 <p>> Ceci est un callout</p>
