--- a/Output/Lien autres docs.html
+++ b/Output/Lien autres docs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Test</title>
+<title>Lien autres docs</title>
 <style>
         body {
             background-color: black;
@@ -88,79 +88,6 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 </head>
 <body>
-<h1>C'est quoi ?</h1>
-<p>Ce document, à pour but d'être un exemple pour mon script qui convertit le markdown en html !! <b>C'est pas incroyable ca ???</b></p>
-<p><i>C'est en italique nan ????</i></p>
-<p></p>
-<h1>Lien</h1>
-<p><a href="Lien autres docs"> Lien autres docs</a> Puis <a href="Lien autres docs"> Lien autres docs</a> et ensuite <a href="Lien autres docs"> Lien autres docs</a></p>
-<p>Ce lien n'existe pas, il devrait etre rouge !! <b>Lien doc inexistant</b> et oui</p>
-<p></p>
-<p></p>
-<h2>Embed</h2>
-<p>!<b>test1</b></p>
-<p></p>
-<p>!<a href="Test numéro 27"> Test numéro 27</a></p>
-<p></p>
-<p></p>
-<p></p>
-<h1>Header 1</h1>
-<ul>
-<li>Element 1</li>
-</ul>
-<ul>
-<li>Element 2</li>
-</ul>
-<ul>
-<li>Element 3</li>
-</ul>
-<ul>
-<li>Element 4</li>
-</ul>
-<ul>
-<li>Element 5</li>
-</ul>
-<h2>Header 2</h2>
-<ul>
-<li>[ ] A faire 1</li>
-</ul>
-<ul>
-<li>[ ] A faire 2</li>
-</ul>
-<ul>
-<li>[ ] A faire 3</li>
-</ul>
-<ul>
-<li>[ ] A faire 4</li>
-</ul>
-<ul>
-<li>[ ] A faire 5</li>
-</ul>
-<h3>Header 3</h3>
-<p>```python</p>
-<p>def main(args):</p>
-<p>print("Hello, world !")</p>
-<p>```</p>
-<h4>Header 4</h4>
-<p>> Note</p>
-<p>> Ceci est une note</p>
-<h5>Header 5</h5>
-<p>\(3x^{4}\times \sin x + e^{ 19 }\)</p>
-<p>\(f(x) = \dfrac{\cos x}{\sin x}\)</p>
-<p>\(\dfrac{a}{n+1}x^{n+1} + C\)</p>
-<h6>Header 6</h6>
-<p>> [!note]</p>
-<p>> Ceci est un callout</p>
-<p></p>
-<p>> [!bug]</p>
-<p>> Ceci est une liste de tous les bugs présent</p>
-<p></p>
-<h1>Test des autres Headers</h1>
-<h1>Header 1</h1>
-<h2>Header 2</h2>
-<h3>Header 3</h3>
-<h4>Header 4</h4>
-<h5>Header 5</h5>
-<h6>Header 6</h6>
+<p>Ceci est un autre document qui devrait être relié avec <a href="Hello World !"> Hello World !</a>.</p>
 </body>
 </html>
