--- a/Output/Hello World !.html
+++ b/Output/Hello World !.html
@@ -93,14 +93,14 @@
 <p><i>C'est en italique nan ????</i></p>
 <p></p>
 <h1>Lien</h1>
-<p><a href="Lien autres docs"> Lien autres docs</a> Puis <a href="Lien autres docs"> Lien autres docs</a> et ensuite <a href="Lien autres docs"> Lien autres docs</a></p>
+<p><a href="Lien autres docs.html"> Lien autres docs</a> Puis <a href="Lien autres docs.html"> Lien autres docs</a> et ensuite <a href="Lien autres docs.html"> Lien autres docs</a></p>
 <p>Ce lien n'existe pas, il devrait etre rouge !! <b>Lien doc inexistant</b> et oui</p>
 <p></p>
 <p></p>
 <h2>Embed</h2>
 <p>!<b>test1</b></p>
 <p></p>
-<p>!<a href="Test numéro 27"> Test numéro 27</a></p>
+<p>!<a href="Test numéro 27.html"> Test numéro 27</a></p>
 <p></p>
 <p></p>
 <p></p>
