--- a/Output/Hello World !.html
+++ b/Output/Hello World !.html
@@ -82,12 +82,18 @@
             color: rgb(234, 152, 255);
             font-style: italic;
         }
+
+        #Title {
+            text-align: center;
+            font-size: 50px;
+        }
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 </head>
 <body>
+<h1 id="Title">Hello World !</h1>
 <h1>C'est quoi ?</h1>
 <p>Ce document, à pour but d'être un exemple pour mon script qui convertit le markdown en html !! <b>C'est pas incroyable ca ???</b></p>
 <p><i>C'est en italique nan ????</i></p>
