--- a/Output/Lien autres docs.html
+++ b/Output/Lien autres docs.html
@@ -82,12 +82,18 @@
             color: rgb(234, 152, 255);
             font-style: italic;
         }
+
+        #Title {
+            text-align: center;
+            font-size: 50px;
+        }
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 </head>
 <body>
-<p>Ceci est un autre document qui devrait être relié avec <a href="Hello World !"> Hello World !</a>.</p>
+<h1 id="Title">Lien autres docs</h1>
+<p>Ceci est un autre document qui devrait être relié avec <a href="Hello World !.html"> Hello World !</a>.</p>
 </body>
 </html>
