--- a/Markdown-viewer.html
+++ b/Markdown-viewer.html
@@ -10,7 +10,9 @@
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 </head>
 <body>
-    <div id="markdownContent"></div>
+    <div id="markdownContent">
+        <!-- markdown will be added here -->
+    </div> 
 
     <script src="Viewer.js"></script>
 </body>
