Try fix white-space error on firefox

--- a/Markdown-viewer.html
+++ b/Markdown-viewer.html
@@ -16,6 +16,7 @@
     <div id="markdownContent">
         <!-- markdown will be added here -->
     </div> 
+    <pre><code class="language-python">def main(args):<br>	print("Hello, world!")<br>	if args[0] == "Raphaël":<br>		print("Bonjour RAF !")<br></code></pre>
     <script src="Viewer.js"></script>
 </body>
 </html>
