--- a/Markdown-viewer.html
+++ b/Markdown-viewer.html
@@ -15,8 +15,8 @@
 <body>
     <div id="markdownContent">
         <!-- markdown will be added here -->
-    </div> 
-    <pre><code class="language-python">def main(args):<br>	print("Hello, world!")<br>	if args[0] == "Raphaël":<br>		print("Bonjour RAF !")<br></code></pre>
+    </div>
+    <div class="test">Bonjour <br> coucouc ... ! <br> test </div>
     <script src="Viewer.js"></script>
 </body>
 </html>
