--- a/Markdown-viewer.html
+++ b/Markdown-viewer.html
@@ -13,10 +13,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 </head>
 <body>
+    <div id="file-explorer">
+        <h2>Explorer</h2>
+        <!-- Contenu généré par JS -->
+    </div>
     <div id="markdownContent">
         <!-- markdown will be added here -->
     </div>
-    <div class="test">Bonjour <br> coucouc ... ! <br> test </div>
+    <div id="table-of-contents">
+        <h2>Table of Contents</h2>
+        <!-- Contenu généré par JS -->
+    </div>
+    <!--<div class="test">Bonjour <br> coucouc ... ! <br> test </div>-->
     <script src="Viewer.js"></script>
 </body>
 </html>
