--- a/test.html
+++ b/test.html
@@ -10,10 +10,7 @@
 </head>
 
 <body>
-  <p>Math can be inline like \(2^{2x}=4\), or displayed like:</p>
-  \[2^{3x}=8\]
-  \( \dfrac{1}{2\sqrt{ x }} \)
-</p>
+  <p>Normal line !!!<table><br>  <thead><br>    <tr><br>      <th>Unité d'origine</th><br>      <th>Conversion</th><br>    </tr><br>  </thead><br>  <tbody><br>    <tr><br>      <td>---------------</td><br>      <td>----------------</td><br>    </tr><br>    <tr><br>      <td>Bit</td><br>      <td>1 bit = 1 bit</td><br>    </tr><br>    <tr><br>      <td>Kilobit (kb)</td><br>      <td>1 kb = 1000 bit</td><br>    </tr><br>    <tr><br>      <td>Megabit (Mb)</td><br>      <td>1 Mb = 10^6 bit</td><br>    </tr><br>    <tr><br>      <td>Gigabit (Gb)</td><br>      <td>1 Gb = 10^9 bit</td><br>    </tr><br>    <tr><br>      <td>Terabit (Tb)</td><br>      <td>1 Tb = 10^12 bit</td><br>    </tr><br>    <tr><br>      <td>Petabit (Pb)</td><br>      <td>1 Pb = 10^15 bit</td><br>    </tr><br>    <tr><br>      <td>Exabit (Eb)</td><br>      <td>1 Eb = 10^18 bit</td><br>    </tr><br>    <tr><br>      <td>Zettabit (Zb)</td><br>      <td>1 Zb = 10^21 bit</td><br>    </tr><br>    <tr><br>      <td>Yottabit (Yb)</td><br>      <td>1 Yb = 10^24 bit</td><br>    </tr><br>    <tr><br>      <td>Brontobit (BB)</td><br>      <td>1 BB = 10^27 bit</td><br>    </tr><br>  </tbody><br></table><br></p><ul><li>some base line</li><li>and again</li></ul><h1 id="test">test</h1>
 </body>
 
 </html>
