Add base for re sizable window

--- a/Markdown-viewer.html
+++ b/Markdown-viewer.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="fileExplorer">
+        <div class="resizable" id="fileExplorer">
             <h2>Explorer</h2>
             <!-- Contenu généré par JS -->
         </div>
