--- a/test.html
+++ b/test.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <title>Katex</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Resizable Sidebar</title>
+   <link rel="stylesheet" href="styles_test.css">
 </head>
-
 <body>
-  <p>Normal line !!!<table><br>  <thead><br>    <tr><br>      <th>Unité d'origine</th><br>      <th>Conversion</th><br>    </tr><br>  </thead><br>  <tbody><br>    <tr><br>      <td>---------------</td><br>      <td>----------------</td><br>    </tr><br>    <tr><br>      <td>Bit</td><br>      <td>1 bit = 1 bit</td><br>    </tr><br>    <tr><br>      <td>Kilobit (kb)</td><br>      <td>1 kb = 1000 bit</td><br>    </tr><br>    <tr><br>      <td>Megabit (Mb)</td><br>      <td>1 Mb = 10^6 bit</td><br>    </tr><br>    <tr><br>      <td>Gigabit (Gb)</td><br>      <td>1 Gb = 10^9 bit</td><br>    </tr><br>    <tr><br>      <td>Terabit (Tb)</td><br>      <td>1 Tb = 10^12 bit</td><br>    </tr><br>    <tr><br>      <td>Petabit (Pb)</td><br>      <td>1 Pb = 10^15 bit</td><br>    </tr><br>    <tr><br>      <td>Exabit (Eb)</td><br>      <td>1 Eb = 10^18 bit</td><br>    </tr><br>    <tr><br>      <td>Zettabit (Zb)</td><br>      <td>1 Zb = 10^21 bit</td><br>    </tr><br>    <tr><br>      <td>Yottabit (Yb)</td><br>      <td>1 Yb = 10^24 bit</td><br>    </tr><br>    <tr><br>      <td>Brontobit (BB)</td><br>      <td>1 BB = 10^27 bit</td><br>    </tr><br>  </tbody><br></table><br></p><ul><li>some base line</li><li>and again</li></ul><h1 id="test">test</h1>
+   <div class="sb-cover">
+      <div class="sidebar-right">
+         <div class="resizer-right"></div>
+         <div class="header">
+            <h3>Sidebar Menu</h3>
+         </div>
+         <ul>
+            <li>Sidebar menu list 1</li>
+            <li>Sidebar menu list 2</li>
+            <li>Sidebar menu list 3</li>
+            <li>Sidebar menu list 4</li>
+            <li>Sidebar menu list 5</li>
+            <li>Sidebar menu list 6</li>
+            <li>Sidebar menu list 7</li>
+            <li>Sidebar menu list 8</li>
+            <li>Sidebar menu list 9</li>
+         </ul>
+      </div>
+   </div>
+   <div class="rs-content">
+      <h1>Let's creating resizable sidebar menu</h1>
+   </div>
+   <div class="sb-cover">
+    <div class="sidebar-left">
+       <div class="resizer-left"></div>
+       <div class="header">
+          <h3>Sidebar Menu</h3>
+       </div>
+       <ul>
+          <li>Sidebar menu list 1</li>
+          <li>Sidebar menu list 2</li>
+          <li>Sidebar menu list 3</li>
+          <li>Sidebar menu list 4</li>
+          <li>Sidebar menu list 5</li>
+          <li>Sidebar menu list 6</li>
+          <li>Sidebar menu list 7</li>
+          <li>Sidebar menu list 8</li>
+          <li>Sidebar menu list 9</li>
+       </ul>
+    </div>
+ </div>
+   <script src="script_test.js"></script>
 </body>
-
 </html>
