Test sidebars finsih

--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
       </div>
    </div>
    <div class="rs-content">
-      <h1>Let's creating resizable sidebar menu</h1>
+      <h1>Let's go !</h1>
    </div>
    <div class="sb-cover">
     <div class="sidebar-left">
